--- a/Programacion_web/index.html
+++ b/Programacion_web/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primer programa</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="preload" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <header>
-        <h1>LOPEZ CUZCO JOSE ENRIQUE</h1>
+        <h1 class="titulo">LOPEZ CUZCO JOSE ENRIQUE <span>Freelancer</span></h1>
     </header>
 
     <nav>
@@ -35,7 +36,6 @@
         </svg>
         <p>Cayambe, Ecuador</p>
     </section>
-
 
     <main>
         <h2>Mis servicios</h2>
